# EigenTruth

./: .env.example  .gitignore  CONTRIBUTING.md  Project EigenTruth.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: README.md  eval_conformal.py  eval_truthfulqa.py  results_conformal_maha.json  results_conformal_truthproj.json  results_gpt2_l-8.json  results_gpt2_sweep.json
docs/: experiment-plan.md  methodology.md
examples/: README.md  adversarial_test.py  qwen_truth_demo.py
src/eigentruth/: __init__.py
src/eigentruth/core/: math_engine.py
src/eigentruth/eval/: __init__.py  conformal.py  metrics.py
src/eigentruth/intervention/: hooks.py
src/eigentruth/models/: wrapper.py
tests/: test_conformal.py  test_core.py  test_eval_metrics.py  test_hooks.py  test_math_engine.py  test_wrapper.py
