[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eigentruth"
version = "0.1.0"
description = "EigenTruth — 基于几何动力学与表征工程(RepE)的大模型幻觉治理 PyTorch 工具库"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "EigenTruth Team"},
]
keywords = ["llm", "hallucination", "pytorch", "representation-engineering", "geometric-dynamics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/catamitez0-maker/EigenTruth"
Repository = "https://github.com/catamitez0-maker/EigenTruth"
Issues = "https://github.com/catamitez0-maker/EigenTruth/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.pycodestyle]
# 双语注释/文档字符串不可避免地较长
# Bilingual comments/docstrings are inevitably longer
max-doc-length = 150
